--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!------Entete-------->
 
-    <header>
+    <header class="header">
         <div class="wrapper">
             <a href="#">
                 <img src="images/logo1.png" alt="Logo avion">
@@ -58,7 +58,7 @@
             <div class="titre-sec">
                 <h2>transport</h2>
 
-                <img src="images/icone-plus1.png" alt="symbole plus">
+                <a href=""><img src="images/icone-plus1.png" alt="symbole plus"></a>
             </div>
 
             <div class="contenue">
