--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header class="header">
         <div class="wrapper">
-            <a href="#">
+            <a href="#" class="logo">
                 <img src="images/logo1.png" alt="Logo avion">
                 Voyage LeSieur
             </a>
@@ -43,7 +43,7 @@
 
     <!------Section 1-------->
 
-    <section>
+    <section class="hero">
         <div class="wrapper">
             <h1>Trouver tout pour le voyage!</h1>
         </div>
