--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
 
 </head>
 
@@ -58,11 +59,11 @@
             <div class="titre-sec">
                 <h2>transport</h2>
 
-                <a href=""><img src="images/icone-plus1.png" alt="symbole plus"></a>
+                <a href=""><img src="images/icone-plus1.png" class="js-plus" alt="symbole plus"></a>
             </div>
 
             <div class="contenue">
-                <article>
+                <article class="transports">
                     <img src="images/avion1.png" alt="image avion">
 
                     <h3>Forfaits <strong>avion</strong></h3>
@@ -70,7 +71,7 @@
                     <p>Voyager rapidement et confortablement</p>
                 </article>
 
-                <article>
+                <article class="transports">
                     <img src="images/bateau1.png" alt="image bateau">
 
                     <h3>Forfaits <strong>croisière</strong></h3>
@@ -78,7 +79,7 @@
                     <p>Laissez-vous porter par les vagues</p>
                 </article>
 
-                <article>
+                <article class="transports">
                     <img src="images/auto1.png" alt="image auto">
 
                     <h3>Forfaits <strong>voiture</strong></h3>
@@ -100,11 +101,11 @@
             <p>Voyage LeSieur</p>
 
 
-            <nav>
-                <ul>
-                    <li><a href=""><img src="images/social.svg" alt="facebook"></a></li>
-                    <li><a href=""><img src="images/social1.svg" alt="twitter"></a></li>
-                    <li><a href=""><img src="images/social2.svg" alt="linkedin"></a></li>
+            <nav class="footer">
+                <ul class="menu-social">
+                    <li class="face"><a href=""><img src="images/facebook.svg" alt="facebook"></a></li>
+                    <li class="x"><a href=""><img src="images/twitter.png" alt="twitter"></a></li>
+                    <li class="job"><a href=""><img src="images/linkedin.png" alt="linkedin"></a></li>
                 </ul>
             </nav>
         </div>
